# gkh_bot

./: .gitignore  Dockerfile_apache  alembic.ini  docker-compose.yml  egrnrestart.sh  egrnrr.sh
gis_gkh_bot/: Dockerfile  config.py  main.py  mkd.csv  orgs.csv  pyproject.toml  requirements.txt  widths.json
gis_gkh_bot/bot/: runner.py
gis_gkh_bot/bot/config/: bot.py
gis_gkh_bot/bot/handlers/: infogis.py  start.py
gis_gkh_bot/bot/keyboards/: data_types.py  for_start.py
gis_gkh_bot/dadata_wrapper/: dadataapi.py
gis_gkh_bot/database/: __init__.py  enums.py  models.py  partitions.py  saver.py
gis_gkh_bot/migrations/: env.py
gis_gkh_bot/migrations/versions/: 1b2422be5e22_mkd_data_to_str.py  7fad43a48ba3_init.py
gis_gkh_bot/parser/: mkd.py  organisation.py  organization.py  room.py  saver.py  utils.py
gis_gkh_bot/pdf_collector/: api.py  control_info.py  passport.py  utils.py
