[tool.poetry]
name = "gis-gkh-bot"
version = "0.1.0"
description = ""
authors = ["Froja-frog <75538844+Froja-frog@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gis_gkh_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
bs4 = "^0.0.1"
lxml = "^4.9.2"
aiogram = {git = 'https://github.com/aiogram/aiogram.git', branch='dev-3.x'}
google-api-python-client = "^2.91.0"
oauth2client = "^4.1.3"
ujson = "^5.8.0"
jmespath = "^1.0.1"
loguru = "^0.7.0"
asyncio-throttle = "^1.0.2"
pygsheets = "^2.0.6"
redis = "^4.6.0"
openpyxl = "^3.1.2"
gspread-asyncio = "^1.8.1"
async-property = "^0.2.2"
async-lru = "^2.0.3"
playwright = "^1.36.0"
pypdf = "^3.13.0"
dadata = "^21.10.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
webdriver-manager = "^3.8.6"
undetected-chromedriver = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
